--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/PUBLIC-METHODS/floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-SLIDE/PUBLIC-METHODS/floor-slide.html
@@ -40,7 +40,7 @@
             Once this function gets called, your character will start sliding on the floor, decreasing the speed of their <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a>
             by the specified '<b>floorSlideDesceleration</b>' value, set in the inspector of the component.
             <br> <br>
-            Note the function only executes the raw part of the mechanic. If additional behaviour, such as continuing the slide when the character is
+            Note that the function only executes the raw part of the mechanic. If additional behaviour, such as continuing the slide when the character is
             under a ceiling, is required, you must implement it independently.
         </p>
         <br>
