--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -35,12 +35,12 @@
                 <tr>
                     <td class="label-classes">CharacterLedgeGrab</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterDash</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-DASH/character-dash.html">Scripting</a></td>
                 </tr>
             </table>
         </div>
