--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/character-ledge-grab.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CharacterSlide</title>
+    <title>CharacterLedgeGrab</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>CharacterSlide</h1>
+        <h1>CharacterLedgeGrab</h1>
         <h2>Dependencies</h2>
         <p>
             <p><b style="text-decoration: underline;">Required</b> Component: <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
@@ -27,23 +27,23 @@
         <br>
         <h2>Description</h2>
         <p>
-            This class is responsible for controlling your character when they are sliding either on a <b>floor</b> or on a <b>wall</b>.
+            This class will help you manage your character Ledge <b>Grab</b> and/or Ledge <b>Climb</b> state.
         </p>
         <br>
         <div class="table-division">
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/floor-slide.html">FloorSlide</a></td>
-                    <td>Controls the behaviour of the character for as long as the character is floor sliding.</td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/enter-ledge-grab-state.html">EnterLedgeGrabState</a></td>
+                    <td>Sets your character's state to Ledge Grab.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/start-wall-sliding.html">StartWallSliding</a></td>
-                    <td>Controls the behaviour of the character for as long as the character is wall sliding.</td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/exit-ledge-grab-state.html">ExitLedgeGrabState</a></td>
+                    <td>Exit from Ledge Grab state.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/end-wall-sliding.html">EndWallSliding</a></td>
-                    <td>Resets certain values when the character exits the wall slide.</td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a></td>
+                    <td>Makes the character climb at the top of a ledge.</td>
                 </tr>
             </table>
         </div>
