--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -23,7 +23,7 @@
         <h2>Dependencies</h2>
         <p>
             <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="../CHARACTER-MOVEMENT/character-movement.html">CharacterMovement</a>, <a class="redirect-link" href="../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
-            <p><span>Optional</span> Components: <a class="redirect-link" href="#">CharacterSlide</a>, <a class="redirect-link" href="#">CharacterDash</a>, <a class="redirect-link" href="#">CharacterLedgeGrab</a>, <a class="redirect-link" href="#">CharacterCombat</a></p>
+            <p><span>Optional</span> Components: <a class="redirect-link" href="../CHARACTER-SLIDE/character-slide.html">CharacterSlide</a>, <a class="redirect-link" href="../CHARACTER-DASH/character-dash.html">CharacterDash</a>, <a class="redirect-link" href="../CHARACTER-LEDGE-GRAB/character-ledge-grab.html">CharacterLedgeGrab</a>, <a class="redirect-link" href="#">CharacterCombat</a></p>
         </p>
         <br>
         <h2>Description</h2>
