--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-METHODS/set-character-move-speed.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-METHODS/set-character-move-speed.html
@@ -45,7 +45,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
-        characterMovement = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&LeftAngleBracket;<a class="redirect-link" href="../character-movement.html">CharacterMovement</a>&RightAngleBracket;();
+        characterMovement = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-movement.html">CharacterMovement</a>&gt;();
     }
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
