--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/ledge-climb.html
@@ -81,7 +81,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
-        envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&LeftAngleBracket;<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>&RightAngleBracket;();
+        envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>&gt;();
         envQuery.<a class="redirect-link" href="../PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
     }
 
@@ -95,7 +95,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
             if (isLedgeClimbing == false)
             {
                 characterLedgeGrab.<a class="redirect-link" href="exit-ledge-grab-state.html">ExitLedgeGrabState</a>();
-                transform.position = endPosition;
+                <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform-position.html">transform.position</a> = endPosition;
 
                 // This will force the above 'if' statement to not be executed, preventing the character from re-entering 'ledge grab' state.
                 exitLedgeGrab = true;
