Combat System additions
Created the main page for the:
- CharacterCombat class
- CombatSystemProjectile class

--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/PUBLIC-METHODS/dash.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/PUBLIC-METHODS/dash.html
@@ -84,7 +84,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         
         if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.LeftShift.html">KeyCode.LeftShift</a>))
         {
-            characterDash.<a class="redirect-link" href="../PUBLIC-METHODS/dash.html">Dash</a>(characterHeight, isGrounded);
+            characterDash.<b>Dash</b>(characterHeight, isGrounded);
         }
     }
 }
