--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/exit-ledge-grab-state.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/exit-ledge-grab-state.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EnterLedgeGrabState</title>
+    <title>ExitLedgeGrabState</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,9 +19,9 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-ledge-grab.html">CharacterLedgeGrab</a>.EnterLedgeGrabState</h1>
+        <h1><a class="redirect-link" href="../character-ledge-grab.html">CharacterLedgeGrab</a>.ExitLedgeGrabState</h1>
         <h2>Declaration</h2>
-        <p>public float <b>EnterLedgeGrabState</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector3.html">Vector3</a> <b>ledgePosition</b>);</p>
+        <p>public float <b>ExitLedgeGrabState</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector3.html">Vector3</a> <b>ledgePosition</b>);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
@@ -62,12 +62,12 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
         envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>&gt;();
-        envQuery.<a class="redirect-link" href="../PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
+        envQuery.<a class="redirect-link" href="../../ENV-QUERY/PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
     }
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-        bool ledgeDetected = envQuery.LedgeGrabCheck>(ref exitLedgeGrab, out <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector3.html">Vector3</a> ledgePosition);
+        bool ledgeDetected = envQuery.LedgeGrabCheck(ref exitLedgeGrab, out <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector3.html">Vector3</a> ledgePosition);
         
         if (!exitLedgeGrab && ledgeDetected)
         {
