Additions to HumanoidController
Added some extra properties

--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-LEDGE-GRAB/PUBLIC-METHODS/ledge-climb.html
@@ -62,7 +62,7 @@
             the <a class="redirect-link" href="../../HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a> function to observe how it interacts with the CharacterLedgeGrab class.
             Navigate to:
             <br>
-            <b>Assets -> 2D Character Controller -> _Scripts -> Character -> Mechanics -> CharacterLedgeGrab.cs</b>
+            <b>Assets -> 2D Character Controller -> _Scripts -> Character -> Controllers -> HumanoidController.cs</b>
         </p>
         <br>
         <p>
