--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td class="label">CharacterCombat</td>
                     <td><a class="redirect-link" href="#">Manual</a></td>
-                    <td><a class="redirect-link" href="#">Scripting</a></td>
+                    <td><a class="redirect-link" href="SCRIPTING/CHARACTER-COMBAT/character-combat.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">AttackSO</td>
@@ -61,7 +61,7 @@
                 <tr>
                     <td class="label-classes">CombatSystemProjectile</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">EntityHealth</td>
