Added files for character combat documentation

--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/character-combat.html
@@ -34,31 +34,31 @@
             <span class="table-title">Events</span>
             <table>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnInitiateNormalAttack</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-initiate-normal-attack.html">OnInitiateNormalAttack</a></td>
                     <td class="description">Triggered when the character initiates a normal attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnInitiateChargeAttack</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-initiate-charge-attack.html">OnInitiateChargeAttack</a></td>
                     <td class="description">Triggered when the character starts charging an attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnChargedAttackFullyCharged</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-charged-attack-fully-charged.html">OnChargedAttackFullyCharged</a></td>
                     <td class="description">Triggered when a charged attack is fully charged.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnReleaseChargeAttack</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-release-charge-attack.html">OnReleaseChargeAttack</a></td>
                     <td class="description">Triggered when the character releases a charged attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnCancelChargeAttack</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-cancel-charge-attack.html">OnCancelChargeAttack</a></td>
                     <td class="description">Triggered when a charged attack is cancelled.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnAttackDealtDamage</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-attack-dealt-damage.html">OnAttackDealtDamage</a></td>
                     <td class="description">Triggered when an attack successfully deals damage to a damageable object.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="events" href="#">OnProjectileThrown</a></td>
+                    <td class="label"><a class="events" href="EVENTS/on-projectile-thrown.html">OnProjectileThrown</a></td>
                     <td class="description">Triggered when a projectile is thrown by an attack.</td>
                 </tr>
             </table>
@@ -68,39 +68,39 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
-                    <td class="label"><a class="properties" href="#">CurrentAttackData</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/current-attack-data.html">CurrentAttackData</a></td>
                     <td class="description">The attack data (scriptable object) of the attack that is currently being performed.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">AttackComboCounter</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/attack-combo-counter.html">AttackComboCounter</a></td>
                     <td class="description">Specifies the current combo attack's sequence number.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">IsAttacking</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-attacking.html">IsAttacking</a></td>
                     <td class="description">Indicates whether the character is currently attacking.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">IsCharging</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-charging.html">IsCharging</a></td>
                     <td class="description">Indicates whether the character is currently charging an attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">AttackCompleted</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/attack-completed.html">AttackCompleted</a></td>
                     <td class="description">Indicates whether an attack has been completed.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">ChargeTimer</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/charge-timer.html">ChargeTimer</a></td>
                     <td class="description">Indicates the amount of time an attack needs in order to be fully charged in seconds.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">HoldAttackTimer</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/hold-attack-timer.html">HoldAttackTimer</a></td>
                     <td class="description">Indicates the amount of time an attack can be held before the character is forced to release/cancel it.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">CanMoveWhileAttacking</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/can-move-while-attacking.html">CanMoveWhileAttacking</a></td>
                     <td class="description">Indicates whether the character is able to move while attacking.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">CanChangeDirections</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/can-change-directions.html">CanChangeDirections</a></td>
                     <td class="description">Indicates whether the character is able to change directions while attacking.</td>
                 </tr>
             </table>
@@ -110,23 +110,23 @@
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">PerformNormalAttack</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a></td>
                     <td class="description">Performs a normal single or combo attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">PerformChargedAttack</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/perform-charged-attack.html">PerformChargedAttack</a></td>
                     <td class="description">Starts charging the specified charge attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">TryReleaseChargedAttack</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-release-charged-attack.html">TryReleaseChargedAttack</a></td>
                     <td class="description">Releases the current charge attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">CancelChargedAttack</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/cancel-charged-attack.html">CancelChargedAttack</a></td>
                     <td class="description">Cancels the current charge attack.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">CanMoveWhileCastingAttack</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/can-move-while-casting-attack.html">CanMoveWhileCastingAttack</a></td>
                     <td class="description">Manipulates the velocity of the character for the duration of the attack.</td>
                 </tr>
             </table>
